--- a/sashimi-manager/package.json
+++ b/sashimi-manager/package.json
@@ -12,15 +12,18 @@
     "beautify-watch": "onchange src//**/*.{ts,tsx}' -- prettier --write {{changed}}"
   },
   "dependencies": {
+    "@fontsource-variable/cabin": "^5.0.9",
     "@types/react-router-dom": "^5.3.3",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.15.0",
-    "react-icons": "^4.8.0"
+    "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
+    "@svgr/rollup": "^8.1.0",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
