--- a/sashimi-manager/package.json
+++ b/sashimi-manager/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.15.0",
+    "use-react-router-breadcrumbs": "^4.0.1",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
