--- a/sashimi-manager/package.json
+++ b/sashimi-manager/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@fontsource-variable/cabin": "^5.0.9",
+    "@types/c3": "^0.7.8",
     "@types/react-router-dom": "^5.3.3",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
+    "c3": "^0.7.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
