added graph for api requests

--- a/sashimi-manager/package.json
+++ b/sashimi-manager/package.json
@@ -13,11 +13,11 @@
   },
   "dependencies": {
     "@fontsource-variable/cabin": "^5.0.9",
-    "@types/c3": "^0.7.8",
     "@types/react-router-dom": "^5.3.3",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "c3": "^0.7.20",
+    "d3": "^7.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -28,6 +28,8 @@
   "devDependencies": {
     "@svgr/rollup": "^8.1.0",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "@types/c3": "^0.7.8",
+    "@types/d3": "^7.4.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
