--- a/sashimi-manager/package.json
+++ b/sashimi-manager/package.json
@@ -30,6 +30,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/c3": "^0.7.8",
     "@types/d3": "^7.4.0",
+    "@types/node": "^20.5.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
