--- a/sashimi-manager/package.json
+++ b/sashimi-manager/package.json
@@ -12,7 +12,9 @@
     "beautify-watch": "onchange src//**/*.{ts,tsx}' -- prettier --write {{changed}}"
   },
   "dependencies": {
+    "@fontsource-variable/bitter": "^5.0.9",
     "@fontsource-variable/cabin": "^5.0.9",
+    "@fontsource-variable/lora": "^5.0.9",
     "@types/react-router-dom": "^5.3.3",
     "@types/socket.io-client": "^1.4.0",
     "animate.css": "^4.1.1",
